--- a/Fanfics/304. Weekly De‑Aging and Dual Timeline Memories.md
+++ b/Fanfics/304. Weekly De‑Aging and Dual Timeline Memories.md
@@ -3,7 +3,7 @@
 Магический инцидент запускает у Джейсона недельное омоложение на год: каждая неделя «переписывает» документы и память окружающих так, будто он всегда был младше. Он самостоятельно останавливает проклятие через пару недель, но уже случившееся не откатить — он застревает в 15 лет. Для Бэтсемьи реальность тоже меняется: они помнят обе временные линии (изначальную и «перезаписанную»), что усиливает вину, опеку и попытки вернуть Джейсона домой. Джейсон балансирует между взрослой идентичностью Красного Капюшона и подростковым телом, скрывая возраст от Готэма, споря с семьёй о границах и постепенно принимая их поддержку. Файл содержит разбор последствий проклятия, эмоциональную динамику, идеи сцен (ритуал остановки, семейные жесты вместо слов, компромиссное возвращение в поместье) и художественные главы о выборе, доверии и новом взгляде на дом.
 
 ---
-Джейсон Тодд (Красный Капюшон) попадает в магический инцидент. Каждую неделю он омолаживается на год. Причем мир вокруг него подстраивается будто так было всегда (то есть его свидетельство о рождении показывает что он родился на год позже, у всех его знакомых воспоминания изменены так, что они думают что Джейсон всегда был на год младше). Уже на вторую неделю он одного возраста с Тимом (изначально ему было 19 лет, а теперь 17). Ему не хочется вовлекать семью в это, поэтому он самостоятельно с этим разбирается. В итоге у него это получается еще две недели спустя, но уже случившееся омоложение не отменить. В итоге ему 15, а воспоминания остальных изменены так что он был усыновлен в 9, умер в 11 и вернулся совсем недавно как Красный Капюшон (типа он все еще второй усыновленный, все еще второй Робин с точки зрения Бэтсемьи, но теперь с их точки зрения он умер ребенком, а не подростком, и прямо сейчас является подростком. учитывая что все события через которые прошел Джейсон все еще произошли, но просто с их точки зрения он был младше когда в них участвовал, то это более трагично осматривается. Семья Джейсона старательно пытается вернуть обратно в поместье, и очень защищает). К его облегчению помимо Бэтсемьи никто не знает возраст Красного Капюшона.
+Джейсон Тодд (Красный Капюшон) попадает в магический инцидент. Каждую неделю он омолаживается на год. Причем мир вокруг него подстраивается будто так было всегда (то есть его свидетельство о рождении показывает что он родился на год позже, у всех его знакомых воспоминания изменены так, что они думают что Джейсон всегда был на год младше). Уже на вторую неделю он одного возраста с Тимом (изначально ему было 19 лет, а теперь 17). Ему не хочется вовлекать семью в это, поэтому он самостоятельно с этим разбирается. В итоге у него это получается еще две недели спустя, но уже случившееся омоложение не отменить. В итоге ему 15, а воспоминания остальных изменены так что он был усыновлен в 9, умер в 11 и вернулся совсем недавно как Красный Капюшон (типа он все еще второй усыновленный, все еще второй Робин с точки зрения Бэтсемьи, но теперь с их точки зрения он умер ребенком, а не подростком, и прямо сейчас является подростком. учитывая что все события через которые прошел Джейсон все еще произошли, но просто с их точки зрения он был младше когда в них участвовал. Семья Джейсона старательно пытается вернуть обратно в поместье, и очень защищает. К его облегчению помимо Бэтсемьи никто не знает возраст Красного Капюшона, благодаря модулятору голоса.
 
 Это очень интересный и эмоционально насыщенный сценарий, который добавляет новый слой трагедии и сложности к и без того непростой истории Джейсона Тодда. Давай разберем, как это может работать в контексте его характера, отношений с Бэтсемьей и динамики Красного Капюшона, а также предложу несколько идей, как эта ситуация может развиваться.
 
