--- a/Fanfics/317. Caspian Seal Curse - Red Hood Bound to the Pelt.md
+++ b/Fanfics/317. Caspian Seal Curse - Red Hood Bound to the Pelt.md
@@ -281,7 +281,7 @@
 
 Семья кивнула, хотя каждый из них чувствовал, как тревога сжимает их сердца. Шкура, лежащая в контейнере, казалась молчаливым вызовом, её узоры мерцали, как звёзды в ночном небе Готэма. Они ждали Затанну, но каждый из них знал, что ответы, которые она принесёт, могут оказаться сложнее, чем они готовы принять. А Джейсон, спящий под действием транквилизатора, оставался в центре этой загадки, связанный с магией, которая угрожала поглотить его.
 
-напиши длинную главу Джейсон просыпается в медотсеке, чувствуя слабость из-за приближающегося таймера трансформации. Бэтсемья задаёт вопросы, зная о шкуре, но он всё ещё не может говорить о ней прямо, хотя похоже тот факт, что семья уже знает о шкуре позволяет ему давать размытые ответы. Он подтверждает, что специально привлекал их внимание ранами. На глазах семьи он превращается в нерпу, освобождаясь из ремней, и выглядит напуганным. Дик поглаживает его на своих коленях, помогая успокоиться. Семья вызывает Затанну, которая прибудет на следующий день (нет Затанны в главе).
+напиши длинную главу Джейсон просыпается в медотсеке, чувствуя слабость из-за приближающегося таймера трансформации. Бэтсемья задаёт вопросы, зная о шкуре, но он всё ещё не может говорить о ней прямо, хотя похоже тот факт, что семья уже знает о шкуре позволяет ему давать размытые ответы. Он подтверждает, что специально привлекал их внимание ранами. На глазах семьи он превращается в нерпу, освобождаясь из ремней, и выглядит напуганным. Дик поглаживает его, помогая успокоиться. Семья вызывает Затанну, которая прибудет на следующий день (нет Затанны в главе).
 
 ## Глава 8 - Уязвимость под маской
 
@@ -341,65 +341,6 @@
 
 Джейсон кивнул, слишком уставший, чтобы спорить. Он знал, что шкура всё ещё держит его в своих цепях, но теперь, когда семья была вовлечена, у него появился шанс. Затанна прибудет завтра, и, возможно, она сможет разорвать эту связь. Но пока он лежал на койке, окружённый семьёй, он не мог избавиться от ощущения, что шкура всё ещё наблюдает за ним, её узоры мерцают в его сознании, как предупреждение.
 
-напиши длинную главу Джейсон просыпается в медотсеке, чувствуя слабость из-за приближающегося таймера трансформации. Бэтсемья задаёт вопросы, зная о шкуре, но он всё ещё не может говорить о ней прямо, хотя похоже тот факт, что семья уже знает о шкуре позволяет ему давать размытые ответы (про себя он рад что они ему помогают) (учитывай что ответ Джейсона надо делать тем размытее чем ближе вопрос упоминает шкуру, на прямые вопросы о шкуре он вообще отвечать не может). Он подтверждает, что специально привлекал их внимание ранами. На глазах семьи он превращается в нерпу (шкура вырывается сквозь контейнер и обволакивает его) (на текущий момент Джейсону уже надо около получаса проводить в форме нерпы и он не в восторге от этого (семья не знает сколько времени Джейсону надо быть в трансформации, она даже не знает что оно увеличивается)), освобождаясь из ремней, и выглядит напуганным. Дик поглаживает его на своих коленях, помогая успокоиться. Семья вызывает Затанну, которая прибудет на следующий день (нет Затанны в главе).
-
-## Глава 9 - Пленник шкуры
-
-Медотсек Бэт-пещеры был холодным и безжизненным, как всегда, с его стерильными стенами и резким светом ламп, который, казалось, выжигал тени из углов. Джейсон Тодд очнулся с ощущением, будто его тело весило тонну. Голова гудела, мышцы ныли, а в груди пульсировала знакомая слабость, которая означала одно: таймер трансформации приближался. Он лежал на медицинской койке, прикованный мягкими, но прочными ремнями, которые удерживали его запястья и лодыжки. Транквилизатор, которым его вырубил Брюс, всё ещё давал о себе знать, замедляя реакции, но разум постепенно прояснялся. Он был в Бэт-пещере, окружённый семьёй, и это одновременно успокаивало и бесило его. Он ненавидел быть уязвимым, но где-то в глубине души — в той части, которую он никогда не признавал вслух — он был рад, что они здесь. Они знали о шкуре, и это давало ему шанс, пусть и слабый, вырваться из её цепей.
-
-Джейсон медленно открыл глаза, морщась от света. Брюс стоял у койки, его лицо было как всегда непроницаемым, но в глазах мелькала тень беспокойства. Дик Грейсон сидел ближе всех, его руки были скрещены, но взгляд был мягким, почти братским. Тим Дрейк, как обычно, уткнулся в планшет, анализируя данные с медицинских датчиков, прикреплённых к телу Джейсона. Барбара Гордон сидела у консоли Бэт-компьютера, её пальцы застыли над клавиатурой, а Дамиан Уэйн стоял в стороне, скрестив руки и хмурясь, словно само присутствие Джейсона раздражало его. Но даже Дамиан не мог скрыть лёгкую тревогу в своём взгляде.
-
-— Джей, ты как? — спросил Дик, наклоняясь чуть ближе. Его голос был мягким, но в нём чувствовалась напряжённость, как будто он ждал, что Джейсон в любой момент взорвётся.
-
-Джейсон сглотнул, пытаясь собраться с мыслями. Его горло пересохло, а слабость накатывала всё сильнее, как прилив, который невозможно остановить. — Как будто грузовик переехал, — прохрипел он, пытаясь добавить в голос привычную резкость, но получилось слабо. Он чувствовал шкуру, даже не видя её. Она была где-то рядом, в герметичном контейнере на металлическом столе в углу. Её присутствие давило на него, как невидимый груз, и он знал, что скоро она снова потребует своего.
-
-Брюс шагнул вперёд, его голос был холодным, но требовательным. — Джейсон, мы нашли шкуру в твоём рюкзаке. Она связана с твоим состоянием. Что ты можешь рассказать нам?
-
-Джейсон почувствовал, как его разум захлестнула паника, исходящая от шкуры. Она не хотела, чтобы он говорил. Она сжимала его сознание, заставляя молчать. Но тот факт, что семья уже знала о шкуре, словно ослабил её хватку — не полностью, но достаточно, чтобы он мог дать размытые ответы. Чем ближе вопрос касался шкуры, тем труднее было говорить. Он сжал кулаки, борясь с этим чувством.
-
-— Я… не могу, — выдавил он, его голос дрожал. — Это… сложно. Не могу объяснить… прямо. — Он замолчал, чувствуя, как слова застревают в горле, как будто шкура сдавливала его изнутри.
-
-Дик нахмурился, но его взгляд остался мягким. — Ты нарочно позволял себя ранить, да? Чтобы мы заметили?
-
-Джейсон кивнул, чувствуя облегчение от того, что вопрос не касался шкуры напрямую. — Да. Знал, что вы… начнёте копать. Не мог… просто прийти и сказать. — Он замялся, его взгляд метнулся к контейнеру с шкурой, и паника снова накатила. Он не мог говорить о ней. Не мог даже намекнуть, что она делает.
-
-Тим оторвался от планшета, его глаза сузились. — Мы заметили, что твои показатели ухудшаются, когда шкура далеко. Это магический артефакт, верно? Что он с тобой делает?
-
-Джейсон открыл рот, но слова не пришли. Шкура блокировала его, заставляя молчать. Его взгляд стал затравленным, а дыхание участилось. — Я… не знаю… как сказать, — пробормотал он, его голос был едва слышен. — Это… связано со мной. Не могу… — Он замолчал, чувствуя, как слабость становится невыносимой. Таймер истекал.
-
-Барбара повернулась от консоли, её голос был спокойным, но твёрдым. — Джейсон, мы хотим помочь. Но нам нужно знать, что происходит. Эта шкура… она превращает тебя? Или что-то ещё?
-
-Джейсон сжал зубы, его пальцы вцепились в края койки. Он хотел кричать, хотел рассказать им всё — о превращениях, о зависимости, о том, как шкура заставляет его становиться нерпой, чтобы выжить. Но магия шкуры была сильнее. — Не могу… говорить об этом, — выдавил он, его голос сорвался. — Пожалуйста… просто… помогите.
-
-Прежде чем кто-то успел ответить, раздался громкий треск. Герметичный контейнер на столе содрогнулся, и шкура, словно живая, вырвалась наружу, разбив пластик. Она скользнула по воздуху, как змея, и в мгновение ока обволокла Джейсона. Он закричал, но его крик превратился в лающий вопль, когда его тело начало меняться. Ремни, удерживающие его, лопнули, не выдержав силы магии, и через секунду на койке лежала каспийская нерпа — маленькая, блестящая, с большими тёмными глазами, полными ужаса.
-
-Бэтсемья замерла. Дик первым пришёл в себя, его глаза расширились от шока. — Джейсон? — прошептал он, опускаясь на колени рядом с койкой. Нерпа — Джейсон — попыталась отползти, её ласты беспомощно скользили по гладкой поверхности. Она выглядела напуганной, уязвимой, и это было так не похоже на Красного Капюшона, что сердце Дика сжалось.
-
-— Спокойно, Джей, — сказал он мягко, осторожно протягивая руку. Он погладил гладкую шерсть нерпы, чувствуя, как она дрожит под его пальцами. — Это мы. Ты в безопасности.
-
-Нерпа замерла, её усы дрожали, а глаза метались между Диком и остальными. Джейсон внутри этого тела боролся с паникой, но прикосновение Дика, его голос, спокойный и знакомый, начали пробиваться сквозь хаос. Он ненавидел это — быть таким слабым, таким зависимым, — но тепло руки Дика на его шерсти было якорем, который помогал ему не утонуть в страхе. Он позволил Дику поднять себя на колени, чувствуя, как его маленькое тело дрожит, но постепенно успокаивается.
-
-Брюс смотрел на это молча, его лицо было непроницаемым, но пальцы сжались в кулаки. — Это проклятье, — сказал он, его голос был холодным, но в нём чувствовалась сдерживаемая ярость. — Артефакт заставляет его превращаться. И, похоже, он не может это контролировать.
-
-Тим, всё ещё держа планшет, быстро подключился к датчикам, которые чудом остались на теле Джейсона, несмотря на превращение. — Его показатели стабилизировались, — сказал он, его голос был полон удивления. — Как только он… стал этим, всё пришло в норму. Но мы не знаем, сколько времени ему нужно быть в этом состоянии. Это может быть опасно.
-
-Барбара повернулась к Брюсу. — Я связалась с Затанной. Она прибудет завтра утром. Сказала, что это похоже на проклятье, связанное с артефактом, но ей нужно увидеть его самой, чтобы понять, как оно работает.
-
-Дамиан, до этого молчавший, фыркнул, но его голос был менее резким, чем обычно. — Тодд опять вляпался в то, что не может контролировать. Почему он не сказал нам сразу?
-
-— Потому что он не мог, — ответил Дик, продолжая гладить нерпу, которая теперь лежала у него на коленях, чуть менее напряжённая. — Ты видел, как он пытался говорить. Шкура не даёт ему. Это часть её магии.
-
-Брюс кивнул, его взгляд переместился на разбитый контейнер, где шкура теперь лежала на полу, её узоры мерцали, как звёзды. — Мы держим её под контролем, пока Затанна не прибудет. Никто не прикасается к ней без защиты. И мы не оставляем Джейсона одного.
-
-Джейсон, всё ещё в теле нерпы, слушал их, его разум был в смятении. Он знал, что превращение теперь длится дольше — около получаса, и это пугало его. Он не был в восторге от того, что его тело всё больше подчиняется шкуре, а время, которое он вынужден проводить в этом уязвимом состоянии, увеличивается. Семья не знала об этом, и он не мог им сказать. Но они были здесь, и это давало ему надежду. Где-то в глубине души он был рад, что они вмешались, что они не оставили его одного с этой проклятой магией.
-
-Прошло около тридцати минут, прежде чем шкура начала сползать с него. Превращение обратно было болезненным, как всегда, но Джейсон уже привык к этой боли. Он снова стал человеком, лёжа на койке, потный и задыхающийся. Он посмотрел на Дика, всё ещё сидящего рядом, и пробормотал: — Не привыкай к этому, Грейсон.
-
-Дик усмехнулся, но его глаза были полны тревоги. — Не волнуйся, братишка. Мы разберёмся.
-
-Брюс шагнул вперёд, его голос был твёрдым. — Мы ждём Затанну. До её приезда ты остаёшься здесь. И никаких игр, Джейсон. Мы хотим помочь.
-
-Джейсон кивнул, слишком уставший, чтобы спорить. Он знал, что шкура всё ещё держит его в своих цепях, но теперь, когда семья была рядом, у него появился шанс. Затанна прибудет завтра, и, возможно, она сможет разорвать эту связь. Но пока он лежал на койке, окружённый семьёй, он чувствовал, как шкура наблюдает за ним, её узоры мерцают в его сознании, как предупреждение. И он знал, что эта битва ещё далека от завершения.
 
 длинная глава Затанна прибывает и изучает шкуру и Джейсона. Она объясняет, что шкура — магический артефакт с подобием сознания, стремящийся перестать быть шкурой (но не может быть тюленем без носителя), постепенно поглощая для этого носителя примерно за год. Джейсон избежал худшего, сумев привлечь помощь. Затанна предлагает ритуал разрыва связи, но ей нужны редкие ингредиенты, которые будут готовы через пару недель. Она накладывает временное заклинание, снимающее с Джейсона психологическое давление (то есть он может говорить о ней теперь), но он всё ещё должен превращаться, чтобы поддерживать здоровье, и обещает вернуться как можно скорее.
 
