--- a/Fanfics/327. Niven’s Light - Red Hood, Lost and Reborn.md
+++ b/Fanfics/327. Niven’s Light - Red Hood, Lost and Reborn.md
@@ -1,8 +1,6 @@
-Название: Niven’s Light - Red Hood, Lost and Reborn
+#dc/ori #dimentional_travel #reveal #transformation #magic #hurt-comfort
 
-Теги: #dc/ori #dimentional_travel #reveal #transformation #magic #hurt-comfort
-
-Описание: Артефакт культа затягивает Джейсона в Нивен (Ori), где за полгода он постепенно трансформируется в духа света: уменьшается до 30 см, теряет речь, обретает магию света, ловкость, связь с лесом и Ку. Параллельно в Готэме семья проходит через полгода поиска и горя. Победив порчу у магического узла, Джейсон возвращается в Готэм человеком, но с возможностью переключаться в форму духа; раскрывается семье, которая его не отпускает и обращается к Затанне. Магия света требует подпитки (фрукты/отдых), исследуется новая семейная динамика и принятие двух его миров.
+Артефакт культа затягивает Джейсона в Нивен (Ori), где за полгода он постепенно трансформируется в духа света: уменьшается до 30 см, теряет речь, обретает магию света, ловкость, связь с лесом и Ку. Параллельно в Готэме семья проходит через полгода поиска и горя. Победив порчу у магического узла, Джейсон возвращается в Готэм человеком, но с возможностью переключаться в форму духа; раскрывается семье, которая его не отпускает и обращается к Затанне. Магия света требует подпитки (фрукты/отдых), исследуется новая семейная динамика и принятие двух его миров.
 
 ---
 Джейсон Тодд, Красный Колпак, выслеживает в Готэме культ, использующий древний артефакт. Во время схватки артефакт активируется, открывая портал, и Джейсон падает в мир волшебного леса Нивена (игра Ori). Очнувшись в Нивене, Джейсон замечает странные симптомы: у него в груди странное ощущение тепла. Раненный дух Ку просит Джейсона помочь спасти лес от порчи. (духи говорить словами не умеют, у них голосовые связки к этому не предназначены, так что Ку использует жесты и звуки) Постепенно Джейсон из человека трансформируется в духа света. Трансформация очень постепенная, занимает полгода. Итоговая внешность Джейсона - духа света: Рост 30 см; Тело тонкое и гибкое с мягким свечением; белоснежное тело, иногда с голубоватым или серебристым сиянием; Глаза большие, выразительные, голубые; Уши длинные, подвижные; Хвост пушистый, длинный, активно используется в движении; всё тело излучает мягкое биолюминесцентное свечение; не может использовать речь (голосовые связки для этого не предназначены, он может издавать лишь милые звуки). Итоговые способности Джейсона: ловкость, высокие прыжки, карабканье по стенам, может взаимодействовать с животными, деревьями, использование магии света, исцеление.
