--- a/Fanfics/329. Dreambound Light - Red Hood Between Worlds.md
+++ b/Fanfics/329. Dreambound Light - Red Hood Between Worlds.md
@@ -3,9 +3,7 @@
 После воскрешения половина души Джейсона перерождается в Нибеле как Ори; он переживает события как «осознанные сны», не зная, что это реальность. Позже в Готэме он обнаруживает, что может переключаться между человеком и полудухом, а его свет стирает проклятья; Бэтсемья, Затанна и Константин выходят на след «чистого» источника, однажды видят его и теряют. Портал культа затягивает Джейсона и Дюка обратно в Нибель, где они добираются до Древа и возвращаются домой; связь с Нибелем остаётся. Темы: двойная идентичность, раскрытия, семейная поддержка, доверие и принятие.
 
 ---
-Джейсон Тодд при воскрешении не возвращается полностью, половина его души перерождается в другом мире (лес Нибель из Ori and the Blind Forest, а потом Ori and the Will of the Wisps). После воскрешения Джейсон каждый раз когда засыпает (или теряет сознание) просыпается в другом мире как Ори. Джейсон считает происходящее в Нибеле продолжающимся осознанным сном. (учитывая что он считает это сном, он вполне себе может позволить себе расслабиться и не скрывать свое сердце от мира) (Ори говорить не может, только издавать звуки)напиши главу которая охватывает первый "сон" Джейсона. (самое начало Ori and the Blind Forest, где Нару нашел Ори, и я так полагаю Ори впервые просыпается в пещере Нару) Учитывай что просыпается Робин!
-
-Джейсон (последнее что помнит это его смерть, он еще не знает что его заменили и что Джокер жив, так что это не упоминать). До появления Красного Капюшона еще долго, он еще даже не идея. То есть без мотива гнева с его стороны, он тут травмированный свой смертью ребенок.
+Джейсон Тодд при воскрешении не возвращается полностью, половина его души перерождается в другом мире (лес Нибель из Ori and the Blind Forest, а потом Ori and the Will of the Wisps). После воскрешения Джейсон каждый раз когда засыпает (или теряет сознание) просыпается в другом мире как Ори. Джейсон считает происходящее в Нибеле продолжающимся осознанным сном. (учитывая что он считает это сном, он вполне себе может позволить себе расслабиться и не скрывать свое сердце от мира) (Ори говорить не может, только издавать звуки)напиши главу которая охватывает первый "сон" Джейсона. (самое начало Ori and the Blind Forest, где Нару нашел Ори, и я так полагаю Ори впервые просыпается в пещере Нару) Учитывай что просыпается Робин!Джейсон (последнее что помнит это его смерть, он вообще не Красный Капюшон). До появления Красного Капюшона еще долго, он еще даже не идея. То есть без мотива гнева с его стороны, он тут травмированный свой смертью ребенок.
 
 ## Глава 1 - Первый "сон"
 Темнота. Холодная, липкая, обволакивающая. Джейсон Тодд не чувствовал своего тела — только пустоту, где должны были быть руки, ноги, сердце. Последнее, что он помнил, — это смех. Безумный, режущий, как осколки стекла. Взрыв. Боль. А потом ничего. Он умер. Он знал это. Но почему тогда он всё ещё… здесь?
