--- a/Fanfics/341. Stellar Capture - Red Hood's Accidental Kid Show.md
+++ b/Fanfics/341. Stellar Capture - Red Hood's Accidental Kid Show.md
@@ -3,7 +3,8 @@
 Юмористическая фантастика. Джейсон случайно попадает под телепорт, предназначенный для «милого инопланетянена» детского шоу, и оказывается на космическом корабле. Похитители омолаживают его до детского возраста и заставляют участвовать в программе, где дети «дерутся» за подушки и подарки. Джейсон предлагает транслировать шоу на Землю в надежде, что Бэтсемья заметит. Стеф случайно находит трансляцию; семья обращается к Зелёному Фонарю, находит корабль и спасает Джейсона. Технология омоложения необратима — Джейсон остаётся ребёнком и должен заново взрослеть. Адаптация: университет (литература), прогулки с сопровождением, гала и гиперопека семьи, смена зубов. Темы: адаптация к новой реальности, семейная поддержка, саркастический юмор.
 
 ---
-Жанр: Юмор, Фантастиканапиши длинную художественную главу: Глава 1: "Случайный Захват" Джейсон Тодд, известный как Красный Капюшон, случайно попадает под воздействие технологии телепортации, которая должна была захватить милого инопланетянена для детского шоу. Он оказывается на космическом корабле, и похитители в шоке от того, что поймали взрослого vigilante вместо очаровательного существа. (Джейсона держат в комнате и его вопросы игнорируют. Инопланетян Джейсон не понимает, те его тоже не понимают. В конце главы, когда Джейсон начинает угрожать, то его усыпляют)(не пиши то что не указано в описании главы)
+Жанр: Юмор, Фантастика
+напиши длинную художественную главу: Глава 1: "Случайный Захват" Джейсон Тодд, известный как Красный Капюшон, случайно попадает под воздействие технологии телепортации, которая должна была захватить милого инопланетянена для детского шоу. Он оказывается на космическом корабле, и похитители в шоке от того, что поймали взрослого vigilante вместо очаровательного существа. (Джейсона держат в комнате и его вопросы игнорируют. Инопланетян Джейсон не понимает, те его тоже не понимают. В конце главы, когда Джейсон начинает угрожать, то его усыпляют)(не пиши то что не указано в описании главы)
 
 ## Глава 1 - Случайный Захват
 
@@ -346,74 +347,6 @@
 И впервые за долгое время Джейсон почувствовал, что, может быть, он не так уж одинок в этом новом, странном мире.
 
 Джейсон теперь официально усыновлен (как Джейсон Уэйн). (по новым документам ему 8 лет (и это ему завысили возраст, биологически ему максимум 7, а наиболее вероятно вообще 6)) Людям говорят что он на домашнем обучении, хотя на деле Джейсона анонимно записали в университет (факультет литературы), чтобы ему было чем заняться днем (Джейсон до того как умер хотел пойти в университет, но после смерти было не до этого). Джейсон теперь забирает членов семьи, когда хочет сходить куда-то (он конечно легко может убегать, ему просто это надоело делать).
-
-## Глава 7 - Новый Джейсон Уэйн
-
-Утро в поместье Уэйнов начиналось с привычного ритуала: Альфред подавал завтрак, Брюс просматривал деловые отчёты, а остальные члены Бэт-семьи либо спорили о патрулях, либо пытались выспаться после ночных вылазок. Но для Джейсона Тодда, теперь официально Джейсона Уэйна, утро было ежедневным напоминанием о его новой реальности. Его документы, заботливо оформленные Брюсом через связи в мэрии Готэма, гласили, что ему восемь лет, хотя биологически он выглядел едва ли на семь, а то и на шесть. Джейсон ненавидел это. Он ненавидел, как его отражение в зеркале — мальчишка с большими глазами и мягкими чертами лица — противоречило тому, кем он себя ощущал: закалённым бойцом, Красным Капюшоном, человеком, который видел слишком много, чтобы быть ребёнком.
-
-— Мастер Джейсон, — позвал Альфред, ставя перед ним тарелку с омлетом и тостами. — Сегодня у вас лекция по американской литературе в 10 утра. Я подготовил ваш рюкзак.
-
-— Рюкзак, — проворчал Джейсон, тыкая вилкой в омлет. — Серьёзно, Альфред? Я что, теперь школьник с рюкзачком и бутербродами?
-
-— Не совсем школьник, — ответил Альфред с лёгкой улыбкой. — Студент университета. Факультет литературы, если быть точным. И позвольте заметить, что бутерброды — это классика.
-
-Джейсон фыркнул, но не стал спорить. Идея записать его в университет была компромиссом. Когда-то, ещё до смерти, до Лазаря и всего того хаоса, который стал его жизнью, Джейсон мечтал поступить в колледж. Он любил книги — Шекспира, Диккенса, даже старые детективы в мягких обложках, которые он находил в подворотнях Готэма. Но жизнь Красного Капюшона не оставила места для таких мечтаний. Теперь, когда он оказался в теле ребёнка, Брюс и Барбара нашли способ анонимно записать его на онлайн-курсы Готэмского университета. Официально Джейсон Уэйн был на домашнем обучении — так объясняли любопытным соседям и прессе. На деле же он посещал лекции по литературе, сидя в библиотеке поместья, с ноутбуком, который Тим настроил так, чтобы никто не смог отследить его личность.
-
-— Литература, — пробормотал Джейсон, откусывая тост. — Лучше, чем уроки математики для второклассников, но всё равно… я чувствую себя как в каком-то дурацком фильме.
-
-— Ты мог бы выбрать инженерию, как я предлагал, — заметил Тим, входя в столовую с чашкой кофе. — Но нет, ты захотел читать романы.
-
-— Потому что я не собираюсь тратить свою жизнь на сборку бэт-гаджетов, Дрейк, — огрызнулся Джейсон. — И, кстати, убери этот самодовольный взгляд, или я засуну твой кофе туда, где он тебе не понравится.
-
-Тим только усмехнулся, привыкший к угрозам Джейсона. Дамиан, сидящий на другом конце стола, фыркнул.
-
-— Тодд, ты теперь официально младший в семье. Может, тебе стоит начать уважать старших? — сказал он, намазывая джем на тост с видом короля, раздающего указы.
-
-— Назови меня младшим ещё раз, и я испорчу твой катана, — парировал Джейсон, но его высокий голос делал угрозу скорее комичной, чем устрашающей.
-
-Брюс, сидевший во главе стола, наконец отложил планшет и посмотрел на Джейсона. — Ты справляешься, Джейсон. Я знаю, это нелегко, но ты делаешь прогресс.
-
-— Прогресс? — Джейсон прищурился. — Я застрял в теле шестилетнего, не могу выйти на улицу без сопровождения, и мне приходится притворяться, что я не знаю, как разобрать автомат за три секунды. Это не прогресс, Бэтс. Это чистилище.
-
-Брюс промолчал, но его взгляд был полон того, что Джейсон ненавидел больше всего — сочувствия. Он отвернулся, сосредоточившись на своём омлете. Он не хотел жалости. Он хотел быть собой.
-
----
-
-Джейсон быстро понял, что одиночные прогулки по Готэму — больше не вариант. Его новая внешность — аккуратно одетый мальчик с дорогими кроссовками и идеальной причёской — привлекала слишком много внимания. Стоило ему выйти за ворота поместья, как какая-нибудь сердобольная прохожая начинала задавать вопросы: «Где твои родители, милый?» или «Ты потерялся?» Один раз его чуть не затащила в машину женщина, решившая, что он сбежал из дома. Джейсон, конечно, легко мог сбежать — его навыки никуда не делись, и он всё ещё мог перепрыгнуть забор или затеряться в толпе. Но бегать от взрослых, как какой-то уличный котёнок, ему надоело. Это было унизительно.
-
-Поэтому он начал «забирать» членов семьи, когда хотел куда-то сходить. Сегодня, например, он решил, что ему нужно в книжный магазин в центре Готэма. Он уже дочитал «Великого Гэтсби», который ему задали на курсе, и хотел найти что-то пожёстче — может, Достоевского или Керуака. Но выйти одному? Ни за что.
-
-— Дик, — сказал Джейсон, врываясь в комнату, где Дик тренировался с эспандерами. — Пойдём в город. Мне нужны книги.
-
-Дик поднял бровь, вытирая пот со лба. — Ты мог бы заказать их онлайн, знаешь ли.
-
-— И сидеть в этом мавзолее весь день? — Джейсон скрестил руки. — Нет уж. Пойдём. Или мне позвать Дамиана? Он хотя бы не будет ныть.
-
-— О, низкий удар, — усмехнулся Дик, вставая. — Ладно, малыш Джей, я с тобой. Но только если ты не будешь ворчать всю дорогу.
-
-— Назови меня малышом ещё раз, и я подожгу твою машину, — проворчал Джейсон, но в его голосе не было настоящей злобы.
-
----
-
-В книжном магазине Джейсон чувствовал себя почти нормально. Запах старой бумаги, тихий шорох страниц, приглушённые голоса покупателей — всё это напоминало ему о тех днях, когда он, ещё будучи Робином, прятался в библиотеках, чтобы сбежать от хаоса своей жизни. Дик, как обещал, не лез с разговорами, а просто следил, чтобы никто не начал задавать вопросы о «младшем брате». Джейсон выбрал «Преступление и наказание» и пару сборников поэзии, которые, как он надеялся, помогут ему отвлечься от реальности.
-
-Но даже здесь он не мог полностью расслабиться. Когда он стоял у кассы, продавщица, милая девушка с пирсингом в носу, улыбнулась ему и сказала:— Ой, какой ты милый! Это для школы берёшь?
-
-Джейсон сжал зубы, чувствуя, как кровь приливает к щекам. — Нет, — коротко ответил он, стараясь не сорваться. — Для себя.
-
-Дик, стоящий рядом, еле сдержал смешок, за что получил убийственный взгляд. — Что? — шепнул Дик, когда они вышли из магазина. — Она просто пыталась быть милой.
-
-— Я не милый, — рявкнул Джейсон, но его высокий голос сделал это заявление скорее забавным, чем угрожающим. — Я Красный Капюшон. Я убивал людей. Я…
-
-— Ты Джейсон Уэйн, — мягко перебил Дик, положив руку ему на плечо. — И ты всё ещё тот же парень, который читает Достоевского и пугает всех своим сарказмом. Просто… дай себе время.
-
-Джейсон промолчал, глядя на тротуар. Время. Это было единственное, что у него теперь было в избытке. Ему предстояло заново взрослеть, заново учиться жить в мире, который видел в нём ребёнка. Но он был Джейсоном Тоддом. Он справится. Даже если это означало таскать за собой Дика в книжный или терпеть подколки Дамиана. Он найдёт способ быть собой — даже в этом теле.
-
-— Пошли домой, — наконец сказал он, закидывая рюкзак на плечо. — И если ты расскажешь Стеф, что меня назвали милым, я устрою тебе ад.
-
-Дик рассмеялся, и они направились к машине, оставляя за спиной шумный Готэм и любопытные взгляды прохожих. Впервые за долгое время Джейсон почувствовал, что, может быть, он сможет привыкнуть к этой новой жизни. По крайней мере, пока у него есть книги и семья, которая, несмотря на всё, не даст ему утонуть в этом чистилище.
-
-Джейсон теперь официально усыновлен (как Джейсон Уэйн). (по новым документам ему 8 лет (и это ему завысили возраст, биологически ему максимум 7, а наиболее вероятно вообще 6 (ему сканирование устроили в пещере, чтобы подтвердить что омоложение на его здоровье никак негативно не повлияло))) Людям говорят что он на домашнем обучении, хотя на деле Джейсона анонимно записали в университет (факультет литературы), чтобы ему было чем заняться днем (Джейсон до того как умер хотел пойти в университет, но после смерти было не до этого). Джейсон теперь забирает членов семьи, когда хочет сходить куда-то (он конечно легко может убегать, ему просто это надоело делать).
 
 ## Глава 7 - Новый Джейсон Уэйн
 
