--- a/Fanfics/343. Shadow Maze - Batfamily Lost in Darkness.md
+++ b/Fanfics/343. Shadow Maze - Batfamily Lost in Darkness.md
@@ -531,9 +531,7 @@
 
 — Тт, — фыркнул Дамиан, скрестив руки. — Это унизительно. Отец не должен быть… таким. Мы должны найти способ вернуть его. И Тодда тоже. Он выглядит, как будто ему снова нужно в школу.
 
-Джейсон бросил на Дамиана раздражённый взгляд, его теневое крыло слегка вздрогнуло. — Заткнись, мелкий. Я всё ещё могу тебя уложить, даже если я… — он посмотрел на свои маленькие руки, — …
-
-крошечный.
+Джейсон бросил на Дамиана раздражённый взгляд, его теневое крыло слегка вздрогнуло. — Заткнись, мелкий. Я всё ещё могу тебя уложить, даже если я… — он посмотрел на свои маленькие руки, — …крошечный.
 
 Дик подавил улыбку, но его глаза были полны беспокойства. — Мы разберёмся, Джейсон. Мы найдём ответы. Но сначала нам нужно убедиться, что вы оба в безопасности.
 
