--- a/Fanfics/345. Dream Keeper - Red Hood's Magical Boy Form.md
+++ b/Fanfics/345. Dream Keeper - Red Hood's Magical Boy Form.md
@@ -9,7 +9,11 @@
 
 Враги: Кошмары Готэма Описание: Тёмные сущности, рождающиеся из страхов и подавленных эмоций жителей Готэма. Они выглядят как искажённые фигуры, сотканные из теней и дыма, с горящими жёлтыми глазами. Кошмары пытаются погрузить город в вечный сон, наполненный ужасами, питаясь страхами людей. Цель: Они стремятся усилить кошмары жителей, чтобы стать сильнее, и появляются в местах, где страх особенно силён (больницы, приюты, заброшенные дома). Слабости: Кошмары уязвимы к свету снов — сияющим сферам, которые Джейсон создаёт. Разрушить их можно, только попав в их "ядро" — тёмное сердце внутри теневой формы.
 
-Сюжет: Джейсон находит кулон в старом театре Готэма, когда расследует странные случаи, когда люди впадают в кому после посещения спектаклей. При контакте с его кровью кулон активируется, связывая его с древним духом сновидений, который защищает мир от кошмаров. Теперь Джейсон должен уничтожить все Кошмары Готэма, чтобы вернуться в нормальный облик.--- напиши длинной художественной главой самую первую трансформацию Джейсона Джейсон вместе с Бэтсемьей был на миссии, когда случайно проконтактировал с кулоном. Бэтсемья просто сразу забирает его в Бэтпещеру, чтобы понять что с ним произошло. (у Джейсона нет никакого голоса в голове и других вещей подсказывающих ему что происходит) (нет врагов в этой главе, Джейсон просто пытается привыкнуть к измененным пропорциям тела и новым конечностям) (по крайней мере костюм относительно удобен с шортами, кроссовками и подобным)
+Сюжет: Джейсон находит кулон в старом театре Готэма, когда расследует странные случаи, когда люди впадают в кому после посещения спектаклей. При контакте с его кровью кулон активируется, связывая его с древним духом сновидений, который защищает мир от кошмаров. Теперь Джейсон должен уничтожить все Кошмары Готэма, чтобы вернуться в нормальный облик.
+
+--- 
+
+напиши длинной художественной главой самую первую трансформацию Джейсона Джейсон вместе с Бэтсемьей был на миссии, когда случайно проконтактировал с кулоном. Бэтсемья просто сразу забирает его в Бэтпещеру, чтобы понять что с ним произошло. (у Джейсона нет никакого голоса в голове и других вещей подсказывающих ему что происходит) (нет врагов в этой главе, Джейсон просто пытается привыкнуть к измененным пропорциям тела и новым конечностям) (по крайней мере костюм относительно удобен с шортами, кроссовками и подобным)
 
 ## Глава 1 - Падение в сон
 
