--- a/Fanfics/362. Feather Shadow - Red Hood's Memory-Losing Transformation.md
+++ b/Fanfics/362. Feather Shadow - Red Hood's Memory-Losing Transformation.md
@@ -3,9 +3,7 @@
 Джейсон Тодд в битве с теневых тварями защищает Дика, получает укус, и его кровь активирует артефакт-перо. Джейсон трансформируется в ребёнка с крыльями и костюмом в перьевом стиле, используя перья как кинжалы для уничтожения тварей. Однако артефакт стирает ему память, и Джейсон не помнит, кто он, признавая Брюса как "папу" и следуя за ним как застенчивый утёнок. Энергия артефакта угасает за час, и Джейсон возвращается в норму, но не помнит трансформацию. Артефакт связывается с ним, автоматически активируясь при появлении тварей, вынуждая Джейсона носить его и всегда быть под присмотром из-за потери памяти. После закрытия разлома, откуда появлялись твари, Джейсон получает контроль над формой и сохраняет воспоминания. История о защите, уязвимости, семейной заботе и постепенном принятии магических способностей.
 
 ---
-напиши план глав фанфика Джейсон Тодд (Красный Капюшон) вместе с Бэтсемьей был на миссии. В городе последнее время появляются теневые существа (магические), которые неуязвимы к оружию и оставляют людей в непробудных комах (твари укусом забирают кучу энергии и люди просто не могут проснуться). Бэтсемья искала в храме артефакт, который помог бы им с существами. Но на храм нападают существа и завязывается битва. В битве Дик падает в кому из-за укуса твари. Джейсон оттаскивает Дика от боя к алтарю с артефактом (амулет в форме пера) (они не могут его коснуться и забрать, но и твари тоже). Пара тварей нападает на Джейсона, желая добраться до Дика и забрать больше энергии. Джейсон защищает Дика, но его одна из тварей умудряется укусить. Джейсон начинает вырубаться, а его кровь попадает на алтарь с артефактом. Алтарь и Джейсон вспыхивает светом, который после рассеивания открывает что Джейсон изменился - он выглядит как ребенок, в костюме с перьевыми мотивами и имеет крылья. Джейсон берет перья с крыльев и ими разрушает тварей (метает как кинжалы, твари от контакта в дым растворяются). После разрушения тварей энергия поглощенная ими возвращается к владельцам, так что Дик просыпается. Семья окружает Джейсона и Дика. Брюс видит потерянное выражение лица Джейсона и спрашивает того в порядке ли он, отчет о состоянии и тд. А Джейсон тихим голосом спрашивает кто он. Похоже артефакт трансформировал Джейсона, а также стер тому память. В общем они забирают того в Бэтпещеру. В Бэтпещере они проводят тесты, но похоже Джейсон в порядке, пусть и без воспоминаний. Он все еще чувствует что они ему знакомы и когда его просят предположить кто они для него, то он смотрит на Брюса и тихо спрашивает "папа?
-
-", Брюс замирает на мгновение и кивает, после чего Джейсон от него не отлипает, находясь постоянно рядом. Артефакт не снимается, но энергия в нем угасает и судя по скорости через час исчезнет. Спустя час, в течении которого семья умилялась Джейсоном параллельно изучая артефакт, энергия артефакта заканчивается и во вспышке света Джейсон возвращается в норму. Джейсон не помнит что происходило пока артефакт был активен и он был трансформирован, так что семье приходится рассказать об этом. Артефакт теперь можно снять и Тим его исследует. Похоже тот снова заполняется энергией, а также связан с Джейсоном. В общем Джейсону приходится носить артефакт с собой. Тот самостоятельно активируется при тварях рядом и тогда Джейсон с ними расправляется. Проблема в том что Джейсон ничего не помнит в трансформации (а также та спадает только при исходе энергии), поэтому того обязуют обязательно быть в сопровождении кого-нибудь. Семья умиляется детским Джейсоном и подшучивает над ним, когда тот в норме. После того как семья наконец разбирается с тварями и находит и закрывает разлом из которого они выходили, то Джейсон наконец-то возвращается в норму сохранив воспоминания о произошедшем. Он все еще может переключаться в детскую форму, причем не теряя память и может в любой момент сам вернуться в норму. Но Джейсон не видит смысла в этом (тварей нет, зачем ему это делать).
+напиши план глав фанфика Джейсон Тодд (Красный Капюшон) вместе с Бэтсемьей был на миссии. В городе последнее время появляются теневые существа (магические), которые неуязвимы к оружию и оставляют людей в непробудных комах (твари укусом забирают кучу энергии и люди просто не могут проснуться). Бэтсемья искала в храме артефакт, который помог бы им с существами. Но на храм нападают существа и завязывается битва. В битве Дик падает в кому из-за укуса твари. Джейсон оттаскивает Дика от боя к алтарю с артефактом (амулет в форме пера) (они не могут его коснуться и забрать, но и твари тоже). Пара тварей нападает на Джейсона, желая добраться до Дика и забрать больше энергии. Джейсон защищает Дика, но его одна из тварей умудряется укусить. Джейсон начинает вырубаться, а его кровь попадает на алтарь с артефактом. Алтарь и Джейсон вспыхивает светом, который после рассеивания открывает что Джейсон изменился - он выглядит как ребенок, в костюме с перьевыми мотивами и имеет крылья. Джейсон берет перья с крыльев и ими разрушает тварей (метает как кинжалы, твари от контакта в дым растворяются). После разрушения тварей энергия поглощенная ими возвращается к владельцам, так что Дик просыпается. Семья окружает Джейсона и Дика. Брюс видит потерянное выражение лица Джейсона и спрашивает того в порядке ли он, отчет о состоянии и тд. А Джейсон тихим голосом спрашивает кто он. Похоже артефакт трансформировал Джейсона, а также стер тому память. В общем они забирают того в Бэтпещеру. В Бэтпещере они проводят тесты, но похоже Джейсон в порядке, пусть и без воспоминаний. Он все еще чувствует что они ему знакомы и когда его просят предположить кто они для него, то он смотрит на Брюса и тихо спрашивает "папа?", Брюс замирает на мгновение и кивает, после чего Джейсон от него не отлипает, находясь постоянно рядом. Артефакт не снимается, но энергия в нем угасает и судя по скорости через час исчезнет. Спустя час, в течении которого семья умилялась Джейсоном параллельно изучая артефакт, энергия артефакта заканчивается и во вспышке света Джейсон возвращается в норму. Джейсон не помнит что происходило пока артефакт был активен и он был трансформирован, так что семье приходится рассказать об этом. Артефакт теперь можно снять и Тим его исследует. Похоже тот снова заполняется энергией, а также связан с Джейсоном. В общем Джейсону приходится носить артефакт с собой. Тот самостоятельно активируется при тварях рядом и тогда Джейсон с ними расправляется. Проблема в том что Джейсон ничего не помнит в трансформации (а также та спадает только при исходе энергии), поэтому того обязуют обязательно быть в сопровождении кого-нибудь. Семья умиляется детским Джейсоном и подшучивает над ним, когда тот в норме. После того как семья наконец разбирается с тварями и находит и закрывает разлом из которого они выходили, то Джейсон наконец-то возвращается в норму сохранив воспоминания о произошедшем. Он все еще может переключаться в детскую форму, причем не теряя память и может в любой момент сам вернуться в норму.
 
 ### План глав фанфика: "Перо Тени" (или "Крылья Забвения")
 
